# Embedded_Systems_Qt_ITI_9-Months

./: .gitattributes  README.md
Qt_Task2/: App test.mkv  CMakeLists.txt  Main.qml  main.cpp
Qt_Task2/Images/: resources.qrc
Qt_Task3_Rpi/: CMakeLists.txt  Main.qml  gpioManager.cpp  gpioManager.h  main.cpp
Qt_Task3_Rpi/Images/: resource.qrc
Task1_Qt/: CMakeLists.txt  Main.qml  main.cpp
